<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
</resources>