<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:padding="12dp"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:background="@color/color_Text_Background"
            android:textColor="@color/color_Text"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:id="@+id/etName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:background="@color/color_Text_Background"
            android:textColor="@color/color_Text"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:background="@color/color_Text_Background"
            android:textColor="@color/color_Text"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:id="@+id/etPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:background="@color/color_Text_Background"
            android:textColor="@color/color_Text"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:id="@+id/etConfirmPassword"/>

        <Button
            android:id="@+id/btnSigin"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/label_sign_in"
            android:background="@color/purple_500"/>
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/label_sign_up"
            android:background="@color/purple_500"/>

    </LinearLayout>



</LinearLayout>